fixed all height behaviours and bugs on iphone's playerFooter

--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -22,9 +22,12 @@
 
 .Root {
     /* height: 100vh; */
-    height: --webkit-fill-available;
-    max-height: 100vh;
+    /* min-height: 100vh; */
+    /* max-height: -webkit-fill-available; */
+    /* max-height: 100vh; */
     display: grid;
+    height: 100vh;
+    max-height: -webkit-fill-available;
 
 }
   
